--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>News App</title>
+    <title>SnapNews</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+      </style>
     <script src="https://kit.fontawesome.com/222cea3eed.js"></script>
 <script src="https://code.iconify.design/1/1.0.4/iconify.min.js">   </script>
   </head>
